Implement characters endpoint
